<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false">
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profile_create_phone_cardView_main"
    android:layout_gravity="top"
    android:layout_margin="10dp"
    style="?attr/cardStyle">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:baselineAligned="false"
android:padding="10dp"    >

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/profile_create_phone_title"
    android:id="@+id/profile_create_phone_title"
    android:layout_gravity="center"
    android:textStyle="bold"
    android:gravity="center_horizontal" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/profile_create_phone_content"
    android:id="@+id/profile_create_phone_text"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal" />

<include
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:ems="10"
    android:id="@+id/profile_create_phone_country_display"
   layout="@layout/profile_create_country_display" />

    <com.ecube.solutions.ecube.widgets.TextInputLayoutAppWidget
        android:id="@+id/profile_create_phone_TextInputLayoutAppWidget_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        app:hasShadow="false"
        app:hint="@string/common_strings_phone"
        app:inputMode="phone" />

</LinearLayout>
</android.support.v7.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_strings_next"
        android:id="@+id/profile_create_phone_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />
    </LinearLayout>