<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_update_password_cardView_old"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:clipToPadding="false"
        android:elevation="12dp"
        android:orientation="vertical"
        card_view:cardCornerRadius="0dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp">

        <TextView
            android:id="@+id/profile_update_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_update_change_password_current"
            android:textColor="@color/md_lime_700"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.ecube.solutions.ecube.widgets.TextInputLayoutAppWidget
            android:id="@+id/profile_update_email_TextInputLayoutAppWidget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            app:hasShadow="false"
            app:hint="@string/common_strings_password"
            app:inputMode="password_confirm"
            card_view:errorColorTyping="@color/md_green_300" />
    </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_update_email_cardView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:clipToPadding="false"
    android:elevation="12dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_change_email_new"
        android:textColor="@color/md_lime_700"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.ecube.solutions.ecube.widgets.TextInputLayoutAppWidget
        android:id="@+id/profile_update_email_TextInputLayoutAppWidget_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        app:hasShadow="false"
        app:hint="@string/common_strings_email"
        app:inputMode="email"
        card_view:errorColorTyping="@color/md_green_300" />
</android.support.v7.widget.CardView>


<Button
    android:id="@+id/profile_update_email_Button_submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:text="@string/common_strings_apply" />

</LinearLayout>