<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false">
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/profile_create_start_cardView_main"
    android:layout_gravity="top"
    android:layout_margin="10dp"
    style="?attr/cardStyle">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:padding="10dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_create_start_title"
        android:id="@+id/profile_create_start_title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/profile_create_start_content"
        android:id="@+id/profile_create_start_text"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal" />
    </LinearLayout>
</android.support.v7.widget.CardView>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/common_strings_next"
    android:id="@+id/profile_create_start_button"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"/>
</LinearLayout>