<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp">

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_update_password_cardView_old"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:clipToPadding="false"
    android:elevation="12dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10dp">

    <TextView
        android:id="@+id/profile_update_phone_TextView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_change_password_current"
        android:textColor="@color/md_lime_700"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.ecube.solutions.ecube.widgets.TextInputLayoutAppWidget
        android:id="@+id/profile_update_phone_TextInputLayoutAppWidget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        app:hasShadow="false"
        app:hint="@string/common_strings_password"
        app:inputMode="password_confirm"
        card_view:errorColorTyping="@color/md_green_300" />
</android.support.v7.widget.CardView>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_update_phone_cardView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:clipToPadding="false"
    android:elevation="12dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="0dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="10dp">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:padding="10dp"    >
    <TextView
        android:id="@+id/profile_update_phone_TextView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_change_phone_new"
        android:textColor="@color/md_lime_700"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold" />
    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/profile_update_phone_country_display"
        layout="@layout/profile_create_country_display" />

        <com.ecube.solutions.ecube.widgets.TextInputLayoutAppWidget
            android:id="@+id/profile_update_phone_TextInputLayoutAppWidget_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            app:hasShadow="false"
            app:hint="@string/common_strings_phone"
            app:inputMode="phone" />
    </LinearLayout>
</android.support.v7.widget.CardView>


<Button
    android:id="@+id/profile_update_phone_Button_submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"
    android:text="@string/common_strings_apply" />

</LinearLayout>